[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-client-py"
authors = [{ name = "Omar MHAIMDAT", email = "omarmhaimdat@gmail.com" }]
dynamic = ["version", "readme"]
description = "Python client for interacting with Twitter V2 API available at https://rapidapi.com/datarise-datarise-default/api/twitter-x"
requires-python = ">=3.7"
dependencies = ["aiohttp", "requests"]

[tool.setuptools.dynamic]
version = {attr = "twitter_client_py.__version__"}

[tool.setuptools.dynamic.readme]
file = "README.md"
content_type = "text/markdown"