[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-client-py"
authors = [{ name = "Omar MHAIMDAT", email = "omarmhaimdat@gmail.com" }]
dynamic = ["version", "readme"]
license = { file = "LICENSE" }
description = "Python client for interacting with Twitter V2 API available at https://rapidapi.com/datarise-datarise-default/api/twitter-x"
requires-python = ">=3.7"
keywords = ["twitter", "api", "client", "v2"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["aiohttp", "requests"]

[tool.setuptools.dynamic]
version = { attr = "twitter_client_py.__version__" }

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/datarise-org-ma/twitter-client-py"
repository = "https://github.com/datarise-org-ma/twitter-client-py"
documentation = "https://github.com/datarise-org-ma/twitter-client-py/blob/main/README.md"
issues = "https://github.com/datarise-org-ma/twitter-client-py/issues"
