[metadata]
name = twitter-client-py
author = Omar MHAIMDAT
author_email = omarmhaimdat@gmail.com
version = 0.1.2
description = Python client for interacting with Twitter V2 API available at twitter-x.p.rapidapi.com/
python_requires = >=3.7

[options]
packages = find:
install_requires =
    aiohttp
    requests