[metadata]
name = twitter-client-py
author = Omar MHAIMDAT
author_email = omarmhaimdat@gmail.com
version = 0.2.0
description = Python client for interacting with Twitter V2 API available at https://rapidapi.com/datarise-datarise-default/api/twitter-x
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.7

[options]
packages = find:
install_requires =
    aiohttp
    requests